# http-garden

./: .gitignore  README.md  TROPHIES.md  anomalies.yml  docker-compose.yml  external-services.yml  garden.sh  quirks.yml
images/aiohttp/: Dockerfile  server.py
images/apache/: Dockerfile  proxy.conf  server.conf
images/apache_httpd/: Dockerfile  proxy-h2.conf  proxy.conf  start.sh  start_proxy.sh
images/apache_tomcat/: Dockerfile
images/apache_traffic_server/: Dockerfile  ip_allow.yaml  records.yaml  remap.config  start.sh  storage.config
images/apache_trafficserver/: Dockerfile  records.yaml
images/appweb/: Dockerfile  proxy.conf  server.c  server.conf
images/ats/: Dockerfile  cache.config  ip_allow.yaml  patch.diff  records.yaml
images/aws-c-http/: server.c
images/aws_c_http/: Dockerfile  server.c
images/beast/: http_server.cpp
images/bun/: Dockerfile
images/busybox_httpd/: Dockerfile  httpd_proxy.conf
images/caddy/: Caddyfile  Dockerfile
images/cheroot/: Dockerfile  server.py
images/cherrypy/: Dockerfile  server.py
images/civetweb/: Dockerfile
images/cpp_httplib/: Dockerfile  server.cpp
images/cpython_stdlib/: Dockerfile  server.py
images/daedalus/: server.py
images/daphne/: Dockerfile
images/hyper/garden/: Cargo.toml
images/hyper/garden/src/: main.rs
tools/: diagnose_anomalies.py  diff.py  diff_fuzz.py  echo_server.py  fanout.py  fuzz.py  generate_readme_tables.py  grid.py  hpack.py  http1.py  http2.py  lint.sh  mutations.py  probe_quirks.py  repl.py  requirements-dev.txt  requirements.txt  targets.py  update.py  util.py
(+237 files in other folders)
