[package]
name = "garden"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { path = "../hyper", features = ["full"] }
hyper-util = { path = "../hyper-util", features = ["full"] }
http-body-util = { version = "0.1.3" }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1.7.1" }
base64 = { version = "0.22.1" }
